--- a/templates/main.html
+++ b/templates/main.html
@@ -9,7 +9,7 @@
     <!-- Favicon for all pages -->
     <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon" />
     <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
-    <title>{% block title %}CareerShifters - Find resource near you!{% endblock %}</title>
+    <title>{% block title %}CareerShifters - Find a resource near you!{% endblock %}</title>
 </head>
 
 <body>
